--- a/NiceDream/NiceDream/MainWindow.xaml
+++ b/NiceDream/NiceDream/MainWindow.xaml
@@ -7,13 +7,47 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="667" Width="375">
     <Grid>
+        <Grid.Effect>
+            <DropShadowEffect Opacity="0.25" Direction="-90" Color="#FF000000" BlurRadius="20" ShadowDepth="10"></DropShadowEffect>
+        </Grid.Effect>
+        <!--版面分配-->
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="50"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Button x:Name="ListBtn" Click="ListBtn_Click" Margin="250 50 0 450" BorderBrush="Transparent">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <!--標題欄-->
+        <Border Grid.Column="0" Background="#FFF2FDC1"></Border>
+        
+        <!--內容-->
+        <Border CornerRadius="10 10 0 0" Grid.Column="0" Grid.Row="1">
+            <TextBox x:Name="Textarea" Background="#FFF2FDC1" BorderBrush="Transparent" FontSize="20" Opacity="1" AcceptsReturn="True" TextWrapping="Wrap"></TextBox>
+        </Border>
+
+        <!--邊緣按鈕-->
+        <Border Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" >
+            
+            <!--漸層-->
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#50294A" Offset="0.5"></GradientStop>
+                    <GradientStop Color="#BB398E" Offset="1"></GradientStop>
+                </LinearGradientBrush>
+            </Border.Background>
+            
+            <!--彈出窗口按鈕-->
+        <Button x:Name="ListBtn" Click="ListBtn_Click" Margin="0 10 0 575" BorderBrush="Transparent">
             <Button.Background>
-                <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\the moon.bmp" Stretch="Fill"></ImageBrush>
+                <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\moon.bmp" />
             </Button.Background>
         </Button>
+        </Border>
+        
+
     </Grid>
 </Window>
