--- a/NiceDream/NiceDream/MainWindow.xaml
+++ b/NiceDream/NiceDream/MainWindow.xaml
@@ -5,49 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NiceDream"
         mc:Ignorable="d"
-        Title="MainWindow" Height="667" Width="375">
+        Title="MainWindow" Height="667" Width="375" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
         <Grid.Effect>
-            <DropShadowEffect Opacity="0.25" Direction="-90" Color="#FF000000" BlurRadius="20" ShadowDepth="10"></DropShadowEffect>
+            <DropShadowEffect  Opacity="0.25" Direction="-90" Color="#FF000000" BlurRadius="20" ShadowDepth="10"></DropShadowEffect>
         </Grid.Effect>
         <!--版面分配-->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition Width="187*"></ColumnDefinition>
+            <ColumnDefinition Width="138*"/>
             <ColumnDefinition Width="50"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="25"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition ></RowDefinition>
         </Grid.RowDefinitions>
 
         <!--標題欄-->
-        <Border Grid.Column="0" Background="#FFF2FDC1"></Border>
-        
+        <Border x:Name="TitlrBox" MouseMove="TitlrBox_MouseMove" Grid.Column="0" Background="#FFF2FDC1" CornerRadius="15,0,0,0" Grid.ColumnSpan="2"></Border>
+
         <!--內容-->
-        <Border CornerRadius="10 10 0 0" Grid.Column="0" Grid.Row="1">
-            <TextBox x:Name="Textarea" Background="#FFF2FDC1" BorderBrush="Transparent" FontSize="20" Opacity="1" AcceptsReturn="True" TextWrapping="Wrap"></TextBox>
+        <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" CornerRadius="0 0 0 15"  Background="#FFF2FDC1">
+            <TextBox x:Name="Textarea" Margin="20"  Background="#FFF2FDC1" BorderBrush="Transparent" FontSize="20" Opacity="1"  AcceptsReturn="True" TextWrapping="Wrap"></TextBox>
         </Border>
 
         <!--邊緣按鈕-->
-        <Border Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" >
-            
+        <Border Grid.Column="2" Grid.Row="0" Grid.RowSpan="3" CornerRadius="0,15,15,0">
+
             <!--漸層-->
-            <Border.Background>
+            <Border.Background >
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                     <GradientStop Color="#50294A" Offset="0.5"></GradientStop>
                     <GradientStop Color="#BB398E" Offset="1"></GradientStop>
                 </LinearGradientBrush>
             </Border.Background>
-            
+
             <!--彈出窗口按鈕-->
-        <Button x:Name="ListBtn" Click="ListBtn_Click" Margin="0 10 0 575" BorderBrush="Transparent">
-            <Button.Background>
-                <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\moon.bmp" />
-            </Button.Background>
-        </Button>
+            <Button x:Name="ListBtn" Click="ListBtn_Click" Margin="0 10 0 605" BorderBrush="Transparent">
+                <Button.Background>
+                    <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\moon.bmp" />
+                </Button.Background>
+            </Button>
         </Border>
-        
+
+        <!--列表框按鈕-->
+        <Border Grid.Column="2" Grid.Row="2" CornerRadius="0,0,0,15">
+            <StackPanel Orientation="Vertical">
+                <Slider Margin="20 20 20 20" Height="300" Orientation="Vertical"></Slider>
+                <Button Margin="0 20 0 10 " Background="Transparent" Foreground="White" BorderBrush="Transparent">清空</Button>
+                <Button Height="30" Background="Transparent" BorderBrush="Transparent" Foreground="White">儲存</Button>
+                <Button Height="50" Background="Transparent" BorderBrush="Transparent" Foreground="White">退出</Button>
+            </StackPanel>
+        </Border>
 
     </Grid>
 </Window>
