--- a/NiceDream/NiceDream/MainWindow.xaml
+++ b/NiceDream/NiceDream/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NiceDream"
         mc:Ignorable="d"
-        Title="MainWindow" Height="667" Width="375" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
+        Title="MainWindow" Loaded="Window_Loaded" Height="667" Width="375" WindowStyle="None" AllowsTransparency="True" Background="Transparent">
     <Grid>
         <Grid.Effect>
             <DropShadowEffect  Opacity="0.25" Direction="-90" Color="#FF000000" BlurRadius="20" ShadowDepth="10"></DropShadowEffect>
@@ -24,7 +24,9 @@
         </Grid.RowDefinitions>
 
         <!--標題欄-->
-        <Border x:Name="TitlrBox" MouseMove="TitlrBox_MouseMove" Grid.Column="0" Background="#FFF2FDC1" CornerRadius="15,0,0,0" Grid.ColumnSpan="2"></Border>
+        <Border x:Name="TitlrBox"  Grid.Column="0" Background="#FFF2FDC1" CornerRadius="15,0,0,0" Grid.ColumnSpan="2">
+            <TextBlock x:Name="DateTb" Margin="200 5 20 0" FontSize="15" Foreground="Gray" HorizontalAlignment="Right"></TextBlock>
+        </Border>
 
         <!--內容-->
         <Border Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2" CornerRadius="0 0 0 15"  Background="#FFF2FDC1">
@@ -47,16 +49,21 @@
                 <Button.Background>
                     <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\moon.bmp" />
                 </Button.Background>
+                <Menu>
+                    <MenuItem Header="_ListWindow" Foreground="Transparent" Background="Transparent"></MenuItem>
+                </Menu>
             </Button>
         </Border>
 
         <!--列表框按鈕-->
         <Border Grid.Column="2" Grid.Row="2" CornerRadius="0,0,0,15">
             <StackPanel Orientation="Vertical">
-                <Slider Margin="20 20 20 20" Height="300" Orientation="Vertical"></Slider>
-                <Button Margin="0 20 0 10 " Background="Transparent" Foreground="White" BorderBrush="Transparent">清空</Button>
-                <Button Height="30" Background="Transparent" BorderBrush="Transparent" Foreground="White">儲存</Button>
-                <Button Height="50" Background="Transparent" BorderBrush="Transparent" Foreground="White">退出</Button>
+                <Slider x:Name="SizeSlider" ValueChanged="SizeSlider_ValueChanged" Margin="20 20 20 20" Height="300" Orientation="Vertical">
+                    
+                </Slider>
+                <Button x:Name="RemoveBtn" Click="RemoveBtn_Click" Margin="0 20 0 10 " Background="Transparent" Foreground="White" BorderBrush="Transparent">清空</Button>
+                <Button x:Name="SaveBtn" Click="SaveBtn_Click" Height="30" Background="Transparent" BorderBrush="Transparent" Foreground="White">儲存</Button>
+                <Button x:Name="ExitBtn" Click="ExitBtn_Click" Height="50" Background="Transparent" BorderBrush="Transparent" Foreground="White">退出</Button>
             </StackPanel>
         </Border>
 
