--- a/NiceDream/NiceDream/ListWindow.xaml
+++ b/NiceDream/NiceDream/ListWindow.xaml
@@ -5,8 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NiceDream"
         mc:Ignorable="d"
-        Title="ListWindow" Height="667" Width="375">
-    <Grid x:Name="Page2">
-        <Button>HI</Button>
+        Title="ListWindow" Height="667" Width="375" Background="Transparent" WindowStyle="None" AllowsTransparency="True">
+    <Grid >
+        
+        <!--格式-->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        
+        <!--漸層-->
+        <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="2" CornerRadius="15,15,15,15">
+            <Border.Background >
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#50294A" Offset="0.5"></GradientStop>
+                    <GradientStop Color="#BB398E" Offset="1"></GradientStop>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        
+        <!--圖片的放置與美化-->
+        <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="2" Margin="10 10 200 500" Opacity="0.25">
+            <Border.Background>
+                <ImageBrush ImageSource="F:\git\nicedream\NiceDream\NiceDream\halfmoon.bmp"></ImageBrush>
+            </Border.Background>
+        </Border>
+        
+        <!--邊緣按鈕-->
+        <StackPanel Grid.Column="0" Grid.Row="1" Height="200" Margin="0 100 0 0">
+            <Button x:Name="BackBtn" Click="BackBtn_Click" Margin="10 100 10 10" Background="Transparent" BorderBrush="Transparent" Foreground="White">返回</Button>
+            <Button x:Name="CloseBtn" Click="CloseBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White" HorizontalAlignment="Left"> 退出</Button>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1" Grid.Row="1" x:Name="TodoitemList"></StackPanel>
+
     </Grid>
 </Window>
