--- a/NiceDream/NiceDream/ListWindow.xaml
+++ b/NiceDream/NiceDream/ListWindow.xaml
@@ -38,7 +38,8 @@
         
         <!--邊緣按鈕-->
         <StackPanel Grid.Column="0" Grid.Row="1" Height="200" Margin="0 100 0 0">
-            <Button x:Name="BackBtn" Click="BackBtn_Click" Margin="10 100 10 10" Background="Transparent" BorderBrush="Transparent" Foreground="White">返回</Button>
+            <Button x:Name="AddBtn" Click="AddBtn_Click" Margin="10 100 10 10" Background="Transparent" BorderBrush="Transparent" Foreground="White">新建</Button>
+            <Button x:Name="BackBtn" Click="BackBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White">返回</Button>
             <Button x:Name="CloseBtn" Click="CloseBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White" HorizontalAlignment="Left"> 退出</Button>
         </StackPanel>
 
