--- a/NiceDream/NiceDream/TodoItem.xaml
+++ b/NiceDream/NiceDream/TodoItem.xaml
@@ -6,13 +6,14 @@
              xmlns:local="clr-namespace:NiceDream"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Width="325" Height="60">
+    <Grid Width="625" Height="50">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
+        
 
-        <TextBox x:Name="TimeBox" Background="Transparent" BorderBrush="Transparent" FontSize="20" Foreground="White"></TextBox>
-        <TextBox x:Name="NameBox" Background="Transparent" BorderBrush="Transparent" FontSize="20" Foreground="White"></TextBox>
+        <TextBox x:Name="TimeBox" Grid.Column="0" Background="Transparent" BorderBrush="Transparent" FontSize="20" Foreground="White"></TextBox>
+        <TextBox x:Name="NameBox" Grid.Column="1" Background="Transparent" BorderBrush="Transparent" FontSize="20" Foreground="White" ></TextBox>
     </Grid>
 </UserControl>
