--- a/NiceDream/NiceDream/ListWindow.xaml
+++ b/NiceDream/NiceDream/ListWindow.xaml
@@ -38,13 +38,13 @@
         
         <!--邊緣按鈕-->
         <StackPanel Grid.Column="0" Grid.Row="1" Height="200" Margin="0 100 0 0">
-            <Button x:Name="AddBtn" Click="AddBtn_Click" Margin="10 100 10 10" Background="Transparent" BorderBrush="Transparent" Foreground="White">新建</Button>
+            <Button x:Name="PLayBtn" Click="PLayBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White"> 開始</Button>
             <Button x:Name="BackBtn" Click="BackBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White">返回</Button>
             <Button x:Name="CloseBtn" Click="CloseBtn_Click" Margin="10" Background="Transparent" BorderBrush="Transparent" Foreground="White" HorizontalAlignment="Left"> 退出</Button>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Grid.Row="1" x:Name="TodoitemList">
-            <MediaElement x:Name="MusicMe" Visibility="Hidden" LoadedBehavior="Manual" Volume="0.8" Source="F:\git\nicedream\NiceDream\NiceDream\Wildest Dreams.mp3"></MediaElement>
+            <MediaElement x:Name="MusicMe" MouseLeftButtonUp="MusicMe_MouseLeftButtonUp" Visibility="Hidden" LoadedBehavior="Manual" Volume="0.8" Source="F:\git\nicedream\NiceDream\NiceDream\Wildest Dreams.mp3"></MediaElement>
 
         </StackPanel>
 
